# HSDS_Schedule_LLM

./: .gitignore  README.md  main.py  pyproject.toml
01_training_data_generation/: generate_training_data.py  test_training_data.jsonl
02_model_training/: verify_base_model.py
02_model_training/config/: hsds_schema.json  training_config.yaml
02_model_training/scripts/: 01_validate_data.py  02_analyze_complexity.py  03_create_splits.py  04_format_for_finetune.py  05_train.py  06_inference.py
baml_src/: schedule_parser.baml
