[project]
name = "hsds-schedule-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "baml-py>=0.218.1",
    "dotenv>=0.9.9",
    "jsonschema>=4.26.0",
    "modal>=1.3.1",
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "transformers>=5.0.0",
]
